Bump ktlint to 1.0.0